# tawc

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.gradle.kts  firefox.md  gpu-buffers.md  gradle.properties  notes.md  plan.md  settings.gradle.kts  shm.md  text-input.md
.claude/agents/: default-code-reviewer.md
app/: build.gradle.kts  proguard-rules.pro
chroot-scripts/: arch-chroot  arch-chroot-create  arch-chroot-destroy  arch-chroot-run
client/: arch-chroot-create  arch-chroot-create-emulator  arch-chroot-destroy  arch-chroot-run  build-libhybris  build-libhybris-aarch64  build-libhybris-chroot.sh  build-libhybris-lindroid  build-libxkbcommon  build-proot  build-test-wayland-client  build-xwayland-aarch64  deps-lib.sh  deps.list  select-device.sh  start-emulator  tawc-chroot-run  tawc-scratch.sh  test-ahb-alloc.c  test-ahb-gpu-client.c  test-wayland-client.c
client/ashmem-shim/: ashmem-shim.c
client/memfd-selinux-shim/: build  memfd-selinux-shim.c
client/tawc-wsi/: build  libgl-shim.c  libglesv2-shim.c  tawc-egl.c
client/wayland-flush-shim/: build  flush-shim.c
compositor/: Cargo.toml  build.rs
compositor/protocols/: tawc_gfxstream.xml
compositor/src/: ahb_export.rs  ando.rs  app_paths.rs  bridge.rs  clipboard.rs  compositor.rs  desktop.rs  event_loop.rs  gfxstream_present.rs  gl_import.rs  gtk3_menus_workaround.rs  host.rs  launcher.rs  lib.rs  protocol.rs  render.rs  scale.rs  text_input.rs  wlegl.rs  xwayland.rs
gtk-crash/: README.md  build-and-test.sh  repro.c
issues/: activity-scoped-ime-show-hide.md  ando-su-flow-unverified-on-phone.md  android-headers-version-mismatch.md  android-inputconnection-completeness-and-sync.md  android-to-x11-clipboard-test-flaky.md  assert-compositor-clean-host-teardown-race.md  base-devel-installed-in-prod.md  bootstrap-cache-orphan-arm64-v8a-tarball.md  build-libhybris-swallows-install-errors.md  buildlibhybris-no-incremental-build-tracking.md  cache-proxy-stale-pacman-db.md  chroot-runs-everything-as-root.md  clipboard-fd-writer-threads-unbounded.md  clipboard-xwayland-cap-tests.md  compositor-exit-home-relaunch-edge.md  compositor-wlegl-buffer-scale.md  consolidate-test-broadcasts-into-exec-broker.md  dep-artifacts-stale-vs-checkout-edits.md  device-tests-fail-under-rooted-adbd.md  emulator-shm-black-shader-translator.md  fake-bwrap-disables-sandboxing-test-side.md  firefox-autoconfig-only-applied-via-test-deps.md  firefox-flicker.md  firefox-sandbox-env-vars-in-universal-proot-profile.md  firefox-startup-crash-dialog.md  firefox-test-flaky-on-cold-rootfs.md  firefox-xpcom-fails-under-tawcroot.md  focus-activity-dev-action-fails-from-background.md  gfxstream-wsi-swapchain-alloc-blocker.md  gtk-libhybris-tls-crash.md  gtk3-native-wayland-touch-menubar-opens-leftmost-menu.md  gtk4-debug-app-ready-race.md  gtk4-manjaro-tawcroot-no-text.md  ic-delete-surrounding-after-newline-mistranslates.md  in-app-installer-unused-by-tooling.md  initial-configure-size-test-coverage.md  input-test-flaky-on-emulator.md  input-tests-skip-ic-and-race-system-ime.md  install-alarm-bootstrap-no-pgp.md  install-broadcast-cold-start.md  (+96 more)
notes/: README.md  ando.md  android.md  architecture.md  building.md  cache-proxy.md  chroot.md  clipboard.md  desktop-gl-dispatch.md  distro-abstraction.md  distro-options.md  emulator.md  exec-broker.md  external-binds.md  firefox.md  gfxstream-bridge.md  gpu-strategy.md  gtk3-broken-menus-workaround.md  input.md  installation.md  launcher.md  libhybris-zink.md  mirror-cache.md  multi-activity.md  proot.md  rendering.md  rootfs-sessions.md  task-icons-window-index.md  tawcroot.md  terminal.md  testing.md  text-input.md  wsi-layer.md  xwayland.md
notes/tawcroot/: link-emulation.md  path-translation.md  status.md  testing.md
plans/: README.md  ando-flags.md  ando-toggle.md  clipboard-lazy-fetch.md  desktop-gl-dispatch.md  external-storage-binds.md  gfxstream-bridge-remaining-work.md  gl-on-gles-translator.md  home-screen-shortcuts.md  integration-test-host-transport.md  integration-test-perf.md  launcher-custom-programs.md  smithay-desktop-refactor.md  task-icons-window-switcher.md  tawcroot-default-binds-ro.md  tawcroot-full-link-emulation.md  tawcroot-future-work.md  tawcroot-hosted-asan-tests.md  tawcroot-prod-env-tests.md  tawcroot-readonly-binds.md  tawcroot-user-ro-binds.md  tawcroot-virtual-identity.md  terminal-tabs.md  verify-libhybris-ahb-alpha.md  wipe-consolidation.md  xwayland-glibc-alternative.md  xwayland-server-side-gl.md
scripts/: app-build-install.sh  bridge-setup.sh  build-app.sh  build-debug-app.sh  build-gfxstream-backend.sh  build-host-sysroot.sh  build-kumquat-server.sh  build-libhybris.sh  build-libxkbcommon.sh  build-mesa-gfxstream.sh  build-proot.sh  build-release-apk.sh  build-tawc-dri-test.sh  build-tawc-exec.sh  build-test-apps.sh  build-xwayland.sh  cache-proxy.conf  cache-proxy.sh  check-inputconnection-audit.sh  emulator.sh  ensure-deps.sh  install-distro.sh  install-test-deps.sh  pull-sysroot.sh  rootfs-run.sh  run-integration-tests.sh  setup-rutabaga.sh  setup-smithay.sh  start-emulator.sh  tawc-chroot-run.sh  tawc-exec.sh  uninstall-distro.sh  update-deps.sh
scripts/lib/: deps.sh  select-device.sh  tawc-exec.sh  tawc-install-id.sh  tawc-scratch.sh
server/app/: build.gradle.kts
server/compositor/: Cargo.toml  (+1 more)
tawcroot/: Makefile  README.md  build  build-fixtures  build-fixtures.sh  build.sh  test  test.sh
testing/: build-debug-app.sh  build-tawc-dri-test.sh  install-test-deps.sh  run-integration-tests.sh
tests/integration/: Cargo.toml
tests/integration/src/: adb.rs  chroot.rs  chroot_process.rs  compositor.rs  debug_app.rs  exec_broker.rs  helpers.rs  lib.rs  rootfs.rs  rootfs_process.rs  tawcroot_prodenv.rs
tests/integration/tests/: ando.rs  android_integration.rs  apps.rs  cpu_graphics.rs  external_binds.rs  gfxstream.rs  graphics.rs  hybris.rs  input.rs  integration.rs  launcher.rs  libhybris.rs  libhybris_zink.rs  rendering.rs  scaling.rs  settings.rs  tawcroot.rs  tawcroot_prodenv.rs  text_input.rs  touch_input.rs  uninstall_wipe.rs  xwayland.rs
(+365 files in other folders)
