[package]
name = "compositor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
smithay = { version = "0.7", default-features = false, features = ["wayland_frontend", "renderer_gl", "desktop", "xwayland"] }
jni = "0.21"
ndk = { version = "0.9", features = ["api-level-29"] }
ndk-sys = "0.6"
libloading = "0.8"
log = "0.4"
android_logger = "0.14"
rustix = { version = "0.38", features = ["net"] }
wayland-scanner = "0.31"
wayland-server = "0.31"
wayland-protocols = { version = "0.32", features = ["server"] }
# default-features=false drops gettext-rs (its gettext-sys C build wants
# `x86_64-linux-android-clang` from cc-rs which the NDK doesn't ship under
# that name). We'd only get translated `Name=`/`Comment=` for Ubuntu's
# `X-Ubuntu-Gettext-Domain` hint anyway — the raw locale fallback the
# crate already does covers the common case.
freedesktop-desktop-entry = { version = "0.8", default-features = false }
serde_json = "1"

# gfxstream-bridge: kumquat server runs as a thread of the compositor
# process. See notes/gfxstream-bridge.md "Kumquat in-process". The
# `gfxstream` feature pulls in rutabaga_gfx's gfxstream backend, which
# links against `libgfxstream_backend.so` (built by
# scripts/build-gfxstream-backend.sh and staged next to libcompositor.so
# as a jniLib). cargo picks up the .so via `GFXSTREAM_PATH_RELEASE`
# which gradle's `buildRustLibraryArm64-v8a` task sets.
#
# Aarch64-only: we don't cross-build libgfxstream_backend.so for x86_64
# (gfxstream-vk-on-AVD is the whole reason the bridge exists, but the
# emulator hosts a x86_64 chroot whose Mesa would talk to an aarch64
# kumquat — that's a separate axis we haven't tackled). On x86_64 the
# compositor stays libhybris-only and `bridge::spawn()` is a no-op
# (see compositor/src/bridge.rs's cfg gates).
[target.'cfg(target_arch = "aarch64")'.dependencies]
kumquat_virtio = { path = "../deps/rutabaga_gfx/kumquat/server", features = ["gfxstream"] }

[build-dependencies]
cc = "1.0"

# Pin smithay to our patched fork. The checkout lives at deps/smithay/,
# auto-cloned by scripts/lib/deps.sh — gradle's setupSmithay task does it
# automatically, or run `bash scripts/update-deps.sh smithay` standalone.
# The actual repo + commit pin lives in deps/deps.list.
[patch.crates-io]
smithay = { path = "../deps/smithay" }
