[package]
name = "tawc-integration-tests"
version = "0.1.0"
edition = "2021"
autotests = false

[dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(tawc_skip_gfxstream_on_target)',
    'cfg(tawc_skip_libhybris_on_target)',
    'cfg(tawc_skip_root_on_target)',
] }

[lib]
name = "tawc_integration"
path = "src/lib.rs"
test = false
doctest = false

# One test binary; `tests/integration.rs` declares per-group submodules.
# Test names are `<module>::test_…`, so libtest's normal substring filter
# (e.g. `cargo test <module>::`) picks a subset.
[[test]]
name = "integration"
path = "tests/integration.rs"

[[bin]]
name = "tawc-exec"
path = "src/bin/tawc-exec.rs"
